[dev] add the table.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <html>
+
+<head>
     <title>找相同</title>
-    <body>
-        <p>找相同游戏</p>
-    </body>
+</head>
+
+<body>
+    <p>找相同游戏(请在横屏下使用)</p>
+</body>
+
 </html>
