--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
         <div> <button id="shuf">↺</button> </div>
     </div>
     <div>
-        <table>
+        <table style="width: 100%; height: 100%;">
             <tr>
                 <td id="left_td" class="card"></td>
                 <td id="right_td" class="card"></td>
