--- a/main.html
+++ b/main.html
@@ -3,6 +3,7 @@
 <head>
     <link rel="stylesheet" href="css/main.css">
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.4.1.min.js"></script>
+    <script src="js/main.js"></script>
     <title>找相同(横屏)</title>
 </head>
 
